<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageButton
        android:id="@+id/fwf_imagebutton_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/fwf_imagebutton_notifications"
        android:layout_gravity="center|start"
        android:layout_marginStart="@dimen/menu_margin_start"
        android:background="@color/snow"
        android:src="@drawable/ic_homescreen_menudark_icon" />

    <ImageView
        android:id="@+id/fwf_imageview_applogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/image_padding"
        android:paddingTop="@dimen/image_padding_top"
        android:layout_toLeftOf="@id/fwf_textview_appnamelineone"
        android:paddingBottom="@dimen/image_padding_bottom"
        app:srcCompat="@drawable/ic_dummy_logo_bold" />

    <TextView
        android:id="@+id/fwf_textview_appnamelineone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toolbar_lineone_margintop"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/robotomedium"
        android:text="@string/app_name1_1"
        android:textColor="@color/rust"
        android:textSize="@dimen/toolbar_textsize" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name1_2"
        android:layout_marginStart="@dimen/toolbar_lineone_margintop"
        android:fontFamily="@font/robotomedium"
        android:layout_toEndOf="@+id/fwf_textview_appnamelineone"
        android:layout_alignBottom="@+id/fwf_textview_appnamelineone"
        android:textColor="@color/rust"
        android:textSize="@dimen/toolbar_textsize"/>
    <TextView
        android:id="@+id/fwf_textview_appnamelinetwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomedium"
        android:layout_below="@+id/fwf_textview_appnamelineone"
        android:layout_alignStart="@+id/fwf_textview_appnamelineone"
        android:text="@string/app_name2"
        android:textColor="@color/rust"
        android:layout_marginTop="@dimen/fwf_textview_appnamelinetwo_margintop"
        android:textSize="@dimen/toolbar_textsize"
        />
    <ImageButton
        android:id="@+id/fwf_imagebutton_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/snow"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@+id/fwf_textview_appnamelineone"
        android:layout_marginEnd="@dimen/notification_marginend"
        android:src="@drawable/ic_homescreen_inboxdark_icon"
         />

    <TextView
        android:id="@+id/fwf_textview_notificationcount"
        android:layout_width="@dimen/notification_count_width"
        android:layout_height="@dimen/notification_count_height"
        android:layout_alignTop="@+id/fwf_imagebutton_notifications"
        android:layout_marginStart="@dimen/notification_count_margin_start"
        android:layout_marginTop="@dimen/notification_count_margin_top"
        android:layout_toEndOf="@+id/fwf_imagebutton_notifications"
        android:background="@drawable/notification_count_circle"
        android:text="@string/notification_count"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/snow"
        android:textSize="@dimen/notification_textsize"
        android:maxLines="1"/>

</RelativeLayout>